# Red5Rmtp

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/hz/red5rmtp/: ExampleInstrumentedTest.java
app/src/androidTest/java/hz/rtmpflv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  rtmp_handle.cpp
app/src/main/java/hz/: LiveCamera.java  LiveView.java
app/src/main/java/hz/filters/: BaseFilter.java  CameraFilter.java  ScreenFilter.java  TempFilter.java
app/src/main/java/hz/flv/: AnnexbHelper.java  Flv.java  FlvPacker.java  FlvPackerHelper.java  Packer.java
app/src/main/java/hz/flv/amf/: AmfArray.java  AmfBoolean.java  AmfData.java  AmfDecoder.java  AmfMap.java  AmfNull.java  AmfNumber.java  AmfObject.java  AmfString.java  AmfType.java  AmfUndefined.java  Util.java
app/src/main/java/hz/help/: Key.java  LOG.java  RenderHelp.java  Rotation.java  RotationUtil.java  YuvUtils.java
app/src/main/java/hz/red5rmtp/: HardEncode.java  LiveCamera.java  LiveRtmp.java  LiveSurfaceView.java  MainActivity.java
app/src/main/java/hz/rtmpflv/: HardEncode.java  LiveCamera.java  LiveGLSurfaceView.java  LiveRtmp.java  LiveSurfaceView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/hz/red5rmtp/: ExampleUnitTest.java
app/src/test/java/hz/rtmpflv/: ExampleUnitTest.java
audiortmp/: build.gradle
audiortmp/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
